@@ -1,3 +1,5 @@
+* Rename inventory count quantity_resulting to total_quantity
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Add count wizard on inventory
